WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105686
[Qt][Mac] Fix the build after
r138413
https://bugs.webkit.org/show_bug.cgi?id=105686
Summary
[Qt][Mac] Fix the build after r138413
Csaba Osztrogonác
Reported
2012-12-23 06:19:13 PST
Here is the build log from the Qt Lion bot on build.webkit.org: ---------------------------------------------------------------- /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:73:67: error: copying parameter of type 'WebCore::NetworkStorageSession' invokes deleted constructor return platformStrategies()->cookiesStrategy()->cookiesForDOM(SESSION(document), document->firstPartyForCookies(), url); ^~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:67:27: note: expanded from macro 'SESSION' #define SESSION(document) NetworkStorageSession(networkingContext(document)) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/network/NetworkStorageSession.h:42:26: note: function has been explicitly marked deleted here WTF_MAKE_NONCOPYABLE(NetworkStorageSession); WTF_MAKE_FAST_ALLOCATED; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WTF/wtf/Noncopyable.h:29:13: note: expanded from macro 'WTF_MAKE_NONCOPYABLE' ClassName(const ClassName&) = delete; \ ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:82:64: error: copying parameter of type 'WebCore::NetworkStorageSession' invokes deleted constructor platformStrategies()->cookiesStrategy()->setCookiesFromDOM(SESSION(document), document->firstPartyForCookies(), url, cookieString); ^~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:67:27: note: expanded from macro 'SESSION' #define SESSION(document) NetworkStorageSession(networkingContext(document)) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/network/NetworkStorageSession.h:42:26: note: function has been explicitly marked deleted here WTF_MAKE_NONCOPYABLE(NetworkStorageSession); WTF_MAKE_FAST_ALLOCATED; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WTF/wtf/Noncopyable.h:29:13: note: expanded from macro 'WTF_MAKE_NONCOPYABLE' ClassName(const ClassName&) = delete; \ ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:91:68: error: copying parameter of type 'WebCore::NetworkStorageSession' invokes deleted constructor return platformStrategies()->cookiesStrategy()->cookiesEnabled(SESSION(document), document->firstPartyForCookies(), document->cookieURL()); ^~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:67:27: note: expanded from macro 'SESSION' #define SESSION(document) NetworkStorageSession(networkingContext(document)) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/network/NetworkStorageSession.h:42:26: note: function has been explicitly marked deleted here WTF_MAKE_NONCOPYABLE(NetworkStorageSession); WTF_MAKE_FAST_ALLOCATED; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WTF/wtf/Noncopyable.h:29:13: note: expanded from macro 'WTF_MAKE_NONCOPYABLE' ClassName(const ClassName&) = delete; \ ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:100:83: error: copying parameter of type 'WebCore::NetworkStorageSession' invokes deleted constructor return platformStrategies()->cookiesStrategy()->cookieRequestHeaderFieldValue(SESSION(document), document->firstPartyForCookies(), url); ^~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:67:27: note: expanded from macro 'SESSION' #define SESSION(document) NetworkStorageSession(networkingContext(document)) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/network/NetworkStorageSession.h:42:26: note: function has been explicitly marked deleted here WTF_MAKE_NONCOPYABLE(NetworkStorageSession); WTF_MAKE_FAST_ALLOCATED; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WTF/wtf/Noncopyable.h:29:13: note: expanded from macro 'WTF_MAKE_NONCOPYABLE' ClassName(const ClassName&) = delete; \ ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:109:67: error: copying parameter of type 'WebCore::NetworkStorageSession' invokes deleted constructor return platformStrategies()->cookiesStrategy()->getRawCookies(SESSION(document), document->firstPartyForCookies(), url, cookies); ^~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:67:27: note: expanded from macro 'SESSION' #define SESSION(document) NetworkStorageSession(networkingContext(document)) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/network/NetworkStorageSession.h:42:26: note: function has been explicitly marked deleted here WTF_MAKE_NONCOPYABLE(NetworkStorageSession); WTF_MAKE_FAST_ALLOCATED; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WTF/wtf/Noncopyable.h:29:13: note: expanded from macro 'WTF_MAKE_NONCOPYABLE' ClassName(const ClassName&) = delete; \ ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:118:59: error: copying parameter of type 'WebCore::NetworkStorageSession' invokes deleted constructor platformStrategies()->cookiesStrategy()->deleteCookie(SESSION(document), url, cookieName); ^~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/loader/CookieJar.cpp:67:27: note: expanded from macro 'SESSION' #define SESSION(document) NetworkStorageSession(networkingContext(document)) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WebCore/platform/network/NetworkStorageSession.h:42:26: note: function has been explicitly marked deleted here WTF_MAKE_NONCOPYABLE(NetworkStorageSession); WTF_MAKE_FAST_ALLOCATED; ^ /Users/indt/Development/build-slaves/indt-mountainlion/qt-mountainlion-release/build/Source/WTF/wtf/Noncopyable.h:29:13: note: expanded from macro 'WTF_MAKE_NONCOPYABLE' ClassName(const ClassName&) = delete; \ ^ 6 errors generated. make[2]: *** [.obj/release-shared/loader/CookieJar.o] Error 1
Attachments
Patch
(4.94 KB, patch)
2012-12-23 07:59 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch
(5.38 KB, patch)
2012-12-23 08:31 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-12-23 06:21:06 PST
Could you check and fix it, please? I can't help fixing it without Mac and in the middle of Xmas holiday.
Tony Chang
Comment 2
2012-12-23 07:55:43 PST
I think it's because you can make a copy when binding a temporary to a const reference:
http://stackoverflow.com/questions/760578/const-reference-to-temporary
I'll commit a build fix.
Tony Chang
Comment 3
2012-12-23 07:59:54 PST
Created
attachment 180621
[details]
Patch
Early Warning System Bot
Comment 4
2012-12-23 08:03:38 PST
Comment on
attachment 180621
[details]
Patch
Attachment 180621
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/15507126
EFL EWS Bot
Comment 5
2012-12-23 08:04:36 PST
Comment on
attachment 180621
[details]
Patch
Attachment 180621
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/15491181
Early Warning System Bot
Comment 6
2012-12-23 08:05:38 PST
Comment on
attachment 180621
[details]
Patch
Attachment 180621
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/15507129
Tony Chang
Comment 7
2012-12-23 08:06:43 PST
(In reply to
comment #4
)
> (From update of
attachment 180621
[details]
) >
Attachment 180621
[details]
did not pass qt-ews (qt): > Output:
http://queues.webkit.org/results/15507126
Oops, good thing I used the commit queue. Trying something else.
Tony Chang
Comment 8
2012-12-23 08:31:17 PST
Created
attachment 180622
[details]
Patch
WebKit Review Bot
Comment 9
2012-12-23 09:06:05 PST
Comment on
attachment 180622
[details]
Patch Clearing flags on attachment: 180622 Committed
r138421
: <
http://trac.webkit.org/changeset/138421
>
WebKit Review Bot
Comment 10
2012-12-23 09:06:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug